<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<resources>
    <string name="app_name">SCP Theme Builder</string>
    <string name="theme_name_hint">SCP Theme 00</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!--Main-->
    <string name="tab_title_instructions">Instructions</string>
    <string name="tab_title_components">Components</string>
    <string name="tab_title_theme_summary">Theme summary</string>
    <string name="tab_title_cards">Cards</string>
    <string name="tab_title_menus">Menus</string>

    <!--Instructions-->
    <string name="instructions_how_to">Build your own custom Material Theme by remixing and styling these themeable components.\n\nModify the variables in your project\'s color.xml, type.xml and shape.xml files to see your custom styles cascade through Material Components for Android.</string>
    <string name="instructions_how_to_title">How to use theme builder</string>
    <string name="instructions_options_title">Theme builder options</string>
    <string name="instructions_enable_dark_title">Enable dark theme</string>

    <!--Component-->
    <string name="text_headline_6">Headline 6</string>
    <string name="text_body_2">Body 2</string>
    <string name="text_button">Button</string>
    <string name="text_overline">Overline</string>

    <string name="button_label_title">Button</string>
    <string name="button_left_button_label">Left</string>
    <string name="button_center_button_label">Center</string>
    <string name="button_right_button_label">Right</string>

    <string name="fab_label_title">FAB</string>

    <string name="card_label_title">Card</string>

    <string name="chip_label_title">Chips</string>
    <string name="chip_action_title">Action</string>
    <string name="chip_filter_title">Filter</string>
    <string name="chip_choice_title">Choice</string>
    <string name="chip_entry_title">Entry</string>

    <string name="top_app_bar_label_title">Top app bar</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_search">Search</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>

    <string name="drawer_label_title">Drawer</string>

    <string name="text_field_label_title" description="Label text for a text field [CHAR LIMIT=50]">Text field</string>
    <string name="text_field_hint_text">Label</string>

    <string name="bottom_nav_label_title">Bottom navigation</string>
    <string name="bottom_nav_favorites_title">Favorites</string>
    <string name="bottom_nav_music_title">Music</string>
    <string name="bottom_nav_places_title">Places</string>
    <string name="bottom_nav_news_title">News</string>

    <string name="switch_label_title">Switch</string>

    <string name="radio_button_label_title">Radio button</string>

    <string name="checkbox_label_title">Checkbox</string>

    <string name="bottom_app_bar_label_title">Bottom app bar</string>

    <string name="tabs_label_title">Tabs</string>

    <string name="snackbar_label_title">Snackbar</string>
    <string name="snackbar_message_text">Marked as favorite</string>
    <string name="snackbar_action_text">Action</string>

    <string name="dialog_label_title">Dialog</string>
    <string name="dialog_button_label">Show dialog</string>

    <string name="bottom_sheet_label_title">Bottom sheet</string>
    <string name="bottom_sheet_button_label">Show bottom sheet</string>


    <!--Theme Summary-->
    <string name="label_color_scheme_title">Color scheme</string>

    <string name="label_shape_system_title">Shape system</string>
    <string name="shape_appearance_small_label">S</string>
    <string name="shape_appearance_medium_label">M</string>
    <string name="shape_appearance_large_label">L</string>

    <string name="label_typography_scale_title">Typography scale</string>
    <string name="text_appearance_h1_label">H1</string>
    <string name="text_appearance_h2_label">H2</string>
    <string name="text_appearance_h3_label">H3</string>
    <string name="text_appearance_h4_label">H4</string>
    <string name="text_appearance_h5_label">H5</string>
    <string name="text_appearance_h6_label">H6</string>
    <string name="text_appearance_subtitle_1_label">Subtitle 1</string>
    <string name="text_appearance_subtitle_2_label">Subtitle 2</string>
    <string name="text_appearance_body_1_label">Body 1</string>
    <string name="text_appearance_body_2_label">Body 2</string>
    <string name="text_appearance_button_label">Button</string>
    <string name="text_appearance_caption_label">Caption</string>
    <string name="text_appearance_overline_label">Overline</string>

    <!--Various SCP stuff -->
    <string name="group_scp_example">Group: SCP</string>
    <string name="group_foundation_example">Role: MTF Guard</string>
    <string name="name_example">John Carter</string>
    <string name="play">Play</string>
    <string name="grade">Grade</string>
    <string name="clearance">Clearance</string>
    <string name="grade_example">05</string>
    <string name="clearance_example">5/1337</string>
    <string name="mtf_lore_ipsum">Mobile Task Forces (MTFs) are elite units comprised of personnel drawn from across the Foundation and are mobilized to deal with specific threats or situations that sometimes exceed the operational capacity or expertise of regular field personnel and — as their name suggests — may be relocated between facilities or locations as they are needed. Mobile Task Force personnel represent the \"best of the best\" of the Foundation.</string>
    <string name="containment_class">Containment Class:</string>
    <string name="euclid">Euclid</string>
    <string name="disruption_title">Disruption Class:</string>
    <string name="vlam">VLAM</string>
    <string name="risk_title">Risk Class:</string>
    <string name="Notice">Notice</string>
    <string name="item_number">Item#:</string>
    <string name="scp_2105">2105</string>
    <string name="level_restricted">Restricted</string>
    <string name="level_2">Level2</string>
    <string name="scp_2105_lore">SCP-2105 is a DOS program called \"mv_sk1r.COM\" and is compressed in a .tar.gz archive that also contains a .txt file [Designated DCMT-2105-1], both of the same name.\n\nSCP-2105 can be run on any operating system, despite the .COM filetype generally only functioning on DOS using the COMMAND.COM default program. However, when SCP-2105 is run on other operating systems, it creates its own instance of COMMAND.COM to run inside. Once running, the user is offered multiple options.</string>
    <string name="scp_id">SCP ID Card</string>
    <string name="foundation_id">Foundation ID Card</string>

    <!--Menu Values -->
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="load_game">Load Game</string>
    <string name="main_menu">Main Menu</string>

    <!--SCP card Values -->
    <string name="scp_containment">Containment Class:</string>
    <string name="scp_containment_safe">Safe</string>
    <string name="scp_containment_euclid">Euclid</string>
    <string name="scp_containment_keter">Keter</string>
    <string name="scp_containment_esoteric">Esoteric</string>
    <string name="scp_containment_neutralized">Neutralized</string>
    <string name="scp_containment_pending">Pending</string>
    <string name="scp_containment_explained">Explained</string>

    <string name="scp_disruption">Disruption Class:</string>
    <string name="scp_disruption_dark">Dark</string>
    <string name="scp_disruption_vlam">VLAM</string>
    <string name="scp_disruption_keneq">Keneq</string>
    <string name="scp_disruption_ekhi">Ekhi</string>
    <string name="scp_disruption_amida">Amida</string>

    <string name="scp_risk">Risk Class:</string>
    <string name="scp_risk_notice">Notice</string>
    <string name="scp_risk_caution">Caution</string>
    <string name="scp_risk_warning">Warning</string>
    <string name="scp_risk_danger">Danger</string>
    <string name="scp_risk_critical">Critical</string>

    <string name="scp_clearance_level">Level: %d</string>
    <string name="scp_clearance_level_unrestricted">Unrestricted</string>
    <string name="scp_clearance_level_restricted">Restricted</string>

</resources>
