<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.material.materialthemebuilder.widget.FoundationCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/mtf_lore_ipsum"
        app:roleText="@string/group_foundation_example"
        app:gradeText="@string/grade_example"
        app:clearanceText="@string/clearance_example"
        app:rolePicture="@drawable/mtf_alpha1">

    </io.material.materialthemebuilder.widget.FoundationCardView>

</androidx.constraintlayout.widget.ConstraintLayout>