<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_02_red_tunnel">

    <io.material.materialthemebuilder.widget.LabelLinkView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Main Menu v2"
        app:linkUrl="https://material.io/design/components/buttons-floating-action-button.html"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bNew"
        style="@style/Widget.MyTheme.MainMenuButton"
        android:layout_width="@dimen/buttons_main_menu_width_long"
        android:layout_height="@dimen/buttons_main_menu_height_long"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/bLoad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        style="@style/Widget.MyTheme.MainMenuButton"
        android:id="@+id/bLoad"
        android:text="@string/load_game"
        android:layout_width="@dimen/buttons_main_menu_width_long"
        android:layout_height="@dimen/buttons_main_menu_height_long"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bNew" />

    <Button
        style="@style/Widget.MyTheme.MainMenuButton"
        android:id="@+id/bSettings"
        android:text="@string/settings"
        android:layout_width="@dimen/buttons_main_menu_width_long"
        android:layout_height="@dimen/buttons_main_menu_height_long"
        app:layout_constraintBottom_toTopOf="@+id/bAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLoad" />

    <Button
        style="@style/Widget.MyTheme.MainMenuButton"
        android:id="@+id/bAbout"
        android:text="@string/about"
        android:layout_width="@dimen/buttons_main_menu_width_long"
        android:layout_height="@dimen/buttons_main_menu_height_long"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSettings" />
</androidx.constraintlayout.widget.ConstraintLayout>